# obj-prog-naujas

./: [3~  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dconfig  main-legacy.cpp  main.cpp  makefile  test.cpp  test.txt  test_galvociai.txt  test_vargsiukai.txt  typedefs.h
docs/html/: annotated.html  classAtsitiktinisSkaiciusTest-members.html  classAtsitiktinisSkaiciusTest.html  classAtsitiktinisSkaiciusTest__coll__graph.map  classAtsitiktinisSkaiciusTest__inherit__graph.md5  classStudentas-members.html  classStudentas.html  classStudentas__coll__graph.md5  classStudentas__inherit__graph.map  classZmogus-members.html  classZmogus.html  classZmogus__inherit__graph.map  classZmogus__inherit__graph.md5  classes.html  dir_09e761304027c904456130627fd4dcf5.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_8h_source.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  md_README.html  menu_8h_source.html  pages.html  studentas_8h_source.html  todo.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
docs/latex/: annotated.tex  classAtsitiktinisSkaiciusTest.tex  classAtsitiktinisSkaiciusTest__inherit__graph.md5  classStudentas.tex  classStudentas__inherit__graph.md5  classZmogus.tex  classZmogus__inherit__graph.md5  hierarchy.tex  md_README.tex  refman.tex  todo.tex
headers/menu/: menu-main.h  menu-new-stud.h  menu-read-file.h  menu-stud-both.h  menu-stud-mean.h  menu-stud-medi.h
headers/tools/: calcmean.h  calcmedi.h  clearcin.h  newstud.h  randnum.h  sortstud.h  studstruct.h
includes/: calculations.cpp  calculations.h  functions.cpp  functions.h  helpers.cpp  helpers.h  menu.cpp  menu.h  studentas.cpp  studentas.h
src/: functions.cpp  menu.cpp  studentas.cpp
test/: t10000.txt  test_1000.txt
test_data_sets/: test_10.txt  test_10000.txt
